--- a/src/app/pages/alerts/alerts.component.css
+++ b/src/app/pages/alerts/alerts.component.css
@@ -4,6 +4,9 @@
     justify-content:space-between ;
     margin-top:10px;
     width:80%;
+    flex-grow: inherit;
+    flex:1;
+    
 }
 
 .circleUp-icon{
@@ -21,4 +24,10 @@
 }
 .selectedDiv {
     opacity: 0.2;
+}
+.alertBodyMinor{
+    color:#777777;
+    font-size: 10px;
+    padding: 0px 0px 4px;
+    text-align: center;
 }
