--- a/src/app/pages/brands/brand-detail/brand-detail.component.html
+++ b/src/app/pages/brands/brand-detail/brand-detail.component.html
@@ -6,7 +6,8 @@
     </ng-container>
     <ng-container matColumnDef="desc" style="width:60%">
             <th mat-header-cell *matHeaderCellDef > Product Name </th>
-            <td mat-cell *matCellDef="let element" matSuffix>{{element.desc}}<mat-icon (click) = "deleteProduct(element.id)">delete_forever</mat-icon></td>
+            <!-- <td mat-cell *matCellDef="let element" matSuffix>{{element.desc}}<mat-icon (click) = "deleteProduct(element.id)">delete_forever</mat-icon></td> -->
+            <td mat-cell *matCellDef="let element" matSuffix>{{element.desc}}<mat-icon (click) = "deleteBrandProduct(element.id)">delete_forever</mat-icon></td>
             <!-- <mat-icon>delete_forever</mat-icon> -->
             <td></td>
     </ng-container>
