--- a/src/app/pages/sellers/seller-list/seller-list.component.html
+++ b/src/app/pages/sellers/seller-list/seller-list.component.html
@@ -3,19 +3,22 @@
     <button (click)='addsellerDialog()' mat-raised-button color="primary" style="margin-right:20px">ADD SELLER</button>
 </div>
 
-<mat-card style="margin:auto 15px;width:95%;" >
+<mat-card style="margin:auto 23px;width:94%;" >
     <mat-card-content>
         <mat-nav-list>
-            <a mat-list-item *ngFor="let seller of sellers" [routerLink]="[seller.id]">
-                
+            <a mat-list-item *ngFor="let seller of sellers" >
+                <div style="display:flex;flex:1" [routerLink]="[seller.id]">
                     <div style="display:flex;flex:1;">
                         <span class="circleIcon">{{seller.name[0]}}</span>
                         <span matSuffix>{{seller.name}}</span>
                     </div>
-                    <div><span><button mat-button matTooltip="Upload Product Links"><mat-icon>playlist_add</mat-icon></button></span>
-                        <span><button matTooltip="View Products" mat-button><mat-icon>list</mat-icon></button></span>
-                        <span><button matTooltip="Delete The Seller" mat-button (click) = "deleteSeller(seller)" ><mat-icon >delete_forever</mat-icon></button></span>
-                        <span><button matTooltip="Go To Store" mat-button (click) = "gotoStore(seller)"><mat-icon>next_week</mat-icon></button></span>
+                </div>
+                    <div style="display:flex;flex-direction: row;flex:0;">
+                        <span><button matTooltip="Upload Product Links" mat-button (click) = "uplaodProductLinkDialog()"><mat-icon style="color:#979797" >playlist_add</mat-icon></button></span>
+                        <span><button matTooltip="View Products" [routerLink]="[seller.id]" mat-button><mat-icon style="color:#979797">list</mat-icon></button></span>
+                        <!-- <span><button matTooltip="Delete The Seller" mat-button (click) = "deleteSeller(seller)" ><mat-icon >delete_forever</mat-icon></button></span> -->
+                        <span><button matTooltip="Delete The Seller" mat-button (click) = "deleteSellerDialog(seller.id)" ><mat-icon style="color:#979797">delete_forever</mat-icon></button></span>
+                        <span><button matTooltip="Go To Store" mat-button (click) = "gotoStore(seller)"><mat-icon style="color:#979797">next_week</mat-icon></button></span>
                     </div>                
             </a>    
         </mat-nav-list>
