--- a/src/app/pages/alerts/alerts.component.html
+++ b/src/app/pages/alerts/alerts.component.html
@@ -64,7 +64,7 @@
 
                             </mat-list-item>
                             <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center;">
-                                <mat-spinner></mat-spinner>
+                                <spinner-loader></spinner-loader>
                             </div>
                 </mat-nav-list>
                 </mat-card>
@@ -126,7 +126,7 @@
                                     </div>
                         </mat-list-item>
                         <div *ngIf="isLoading" >
-                                <mat-spinner></mat-spinner>
+                                <spinner-loader></spinner-loader>
                         </div>
                         
                 </mat-nav-list>
@@ -189,7 +189,7 @@
                                     </div>
                         </mat-list-item>
                         <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center;">
-                                <mat-spinner></mat-spinner>
+                                <spinner-loader></spinner-loader>
                         </div>
                         
                 </mat-nav-list>
