--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -56,7 +56,7 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns;" ></tr>
           </table>
           <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center;">
-            <mat-spinner></mat-spinner>
+            <spinner-loader></spinner-loader>
           </div>
         
               
